# cryptoooor

./: .gitignore  package.json
src/: app.css  app.html
src/lib/: Cargo.toml
src/lib/components/: Creator.svelte  Features.svelte  FileEncryptor.svelte  Footer.svelte  KofiButton.svelte  Nav.svelte  SocialLinks.svelte
src/lib/src/: lib.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/privacy/: +page.svelte
src/routes/terms/: +page.svelte
