[package]
name = "cryptoooor-wasm"
version = "0.1.0"
authors = ["pindjouf <esaubukasa@protonmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/pindjouf/cryptoooor-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
bincode = "1.3.3"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
typenum = "1.17.0"
